--- a/apps/progression/project.json
+++ b/apps/progression/project.json
@@ -59,7 +59,10 @@
           "buildTarget": "progression:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/progression/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
